[package]
name = "toby"
version = "0.1.3"
edition = "2024"
description = "A simple, opinionated Telegram bot library with structured command parsing"
authors = ["targc <sommit.kcc@gmail.com>"]
license = "MIT"
repository = "https://github.com/targc/toby"
homepage = "https://github.com/targc/toby"
documentation = "https://docs.rs/toby"
readme = "README.md"
keywords = ["telegram", "bot", "teloxide", "async", "command-parser"]
categories = ["api-bindings", "asynchronous"]

[dependencies]
teloxide = { version = "0.17.0", features = ["macros"] }
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
regex = "1.12.2"
anyhow = "1.0.100"
chrono = "0.4.42"
